--- a/RepoWatcher/Info.plist
+++ b/RepoWatcher/Info.plist
@@ -2,7 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>com.apple.security.application-groups</key>
-	<array/>
+	<key>NSUserActivityTypes</key>
+	<array>
+		<string>SelectSingleRepoIntent</string>
+		<string>SelectTwoReposIntent</string>
+	</array>
 </dict>
 </plist>
